tests/snapshots/test_runner__tests__compiler__typecheck__invalid_function_arguments_length__invalid_function_arguments_length.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
export let foo (i: Int): Int = 2

entry
  2 .foo 3 .print

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/invalid_function_arguments_length/invalid_function_arguments_length.kk:4:3
  │
4 │   2 .foo 3 .print
  │   ^^^^^^ Cannot call a non-function
  │
  = The type of this expression is not function, so you cannot call it.
